--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: php
 php:
-  - 5.5
-  - hhvm
+- 5.5
+- hhvm
 script: phpunit Test.php
+
+before_deploy: zip package.zip Test.php
+deploy:
+  provider: releases
+  api_key: ${GITHUB_TOKEN}
+  file: package.zip
+  on:
+    repo: Asenar/travis-broken-example
